if only obj change -> history reset to 1
--- 17 jan full 2---
parameters: If final scores are within standard dev/10, pick randomly
--- 19 jan full ---
No special treatment for history reset for obj only change
--- 19 jan private only full ---
Max restarts as parameter 0,1
--- 22 jan full ---
Use full strong branching for first instance
--- 23 jan full ---
Instead of full strong branching, increase efforts on reliability branching
Update restart 1 score only if actually restarted.
--- 24 jan full ---
revert to 23 jan full
max restart is again 0.
scip v 8.0.3
--- 25 jan full ---
back to scip v 8.0.2
--- 26 jan base full ---
Conditional compilation in mipcomp.sh
completesol heuristic nodesofs to 5000 (default 500)
completesol heuristic solutions to -1 (default 5)
Provide 9 prev solutions.
--- 30 jan full ---
Reduce efforts for completesol heuristic if obj only change.
Reuse best 10 cuts.
--- 31 jan full ---
Revert cut reuse change.
O3 compilation
--- 10 feb full ---
revert O3 compilation
--- 11 feb full ---
Code cleanup.
Max restart tuning after index 20.
--- 12 feb full ---
revert max restart tuning
Turn off heuristics with time per best soln / timeout > 0.2
--- 13 feb full ---
Heuristic turn off at instance 20
--- 18 feb full ---
back to Heuristic turn off at instance 25
Use timeout - 1 as limit
--- 24 feb private ---
--- 28 feb full server ---
--- 1 mar base full server ---
Remove base_dir from instance file path
SCIP version 8.0.3 again
--- 1 mar full server ---

MPC Paper (all changes are in experiment file)
Use only full solution. (no clipping)
10 solution. 
Efforts increased for completesol heuristic.
--- 19 jun all ---
Solution bound clipping
Only integer variables in hint.
--- 20 jun all ---
Common solution.
--- 21 jun all ---
No solution, like base.
--- 22 jun all ---
No solution
Reuse var history
--- 23 jun all ---
Strong branching for first instance.
Pscost only for rhs only change after instance 4.
--- 24 jun all ---


