@@ -157,6 +157,7 @@ Reuse var history
 Strong branching for first instance.
 Pscost only for rhs only change after instance 4.
 --- 24 jun all ---
+Parameter tuning
 
 
 
